--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,25 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 ul {
     list-style-type: none;
 }
@@ -24,15 +43,6 @@ li {
     color: #ffffff;
 }
 
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -41,13 +51,8 @@ li {
     font-size: 20px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
+.seo {
+    color: #d9dcd6;
 }
 
 .hero {
@@ -59,20 +64,38 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+
+.content img {
+    max-height: 200px;
+}
+
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.content div {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+#search-engine-optimization img, #social-media-marketing img {
+    float: left;
+    margin-right: 25px;
+}
+
+#online-reputation-management img{
+    float: right;
+    margin-left: 25px;
 }
 
 .benefits {
@@ -86,38 +109,15 @@ p {
     background-color: #2589bd;
 }
 
-.benefits h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
 .benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
+.benefits div {
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.content img {
-    max-height: 200px;
-}
-
-.content h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
